# profane-rs

./: Cargo.toml  LICENSE  README.md
src/: Profanity.csv  lib.rs
